Fix mobile logo overlapping menu button and menu alignment

--- a/astrobin/static/css/astrobin-mobile.less
+++ b/astrobin/static/css/astrobin-mobile.less
@@ -11,14 +11,11 @@
     .brand-mobile {
         font: 40px "LeagueGothicRegular";
         text-transform: uppercase;
-        width: 75%;
         position: absolute;
-        top: 10px;
-        left: 50%;
-        margin-left: -37.5%;
+        top: 11px;
+        left: 60px;
         color: #222;
         text-shadow: 0 -1px 0 #000, 0 1px 0 #333;
-        text-align: center;
 
         &:hover, &:focus, &:active {
             color: #ddd;
@@ -82,8 +79,8 @@
 
     .site-nav.nav-collapse {
         position: absolute;
-        top: 50px;
-        left: 16px;
+        top: 52px;
+        left: 12px;
         background: #111;
     }
 
